install prettier-plugin-tailwindcss

--- a/Notes.mdx
+++ b/Notes.mdx
@@ -14,6 +14,8 @@
     - https://prettier.io/
     - important: how to make sure prettier and eslint rules does not conflict with each other
     - https://github.com/prettier/eslint-config-prettier
-    - Tailwind plugin
-      - https://github.com/francoismassart/eslint-plugin-tailwindcss
-    - `pnpm add --save-dev prettier eslint-config-prettier eslint-plugin-tailwindcss`
+    - `pnpm add --save-dev prettier eslint-config-prettier prettier-plugin-tailwindcss`
+    - Prettier plugins:
+      - Prettier Tailwind plugin
+        - https://www.npmjs.com/package/prettier-plugin-tailwindcss
+      -
