1 Eslint and prettier

--- a/Notes.mdx
+++ b/Notes.mdx
@@ -18,4 +18,7 @@
     - Prettier plugins:
       - Prettier Tailwind plugin
         - https://www.npmjs.com/package/prettier-plugin-tailwindcss
-      -
+      - Import sort plugins:
+        - https://github.com/trivago/prettier-plugin-sort-imports
+        - https://github.com/IanVS/prettier-plugin-sort-imports (✅ Recommended)
+          - `pnpm add --save-dev @ianvs/prettier-plugin-sort-imports`
