--- a/Notes.mdx
+++ b/Notes.mdx
@@ -25,7 +25,7 @@
 
 ## 2 Project organization
 
-### 2.1 Component Files Patterns
+### 2.1 Component File Patterns
 
 - 1. One component per file (Some Developers do this but not recommended)
 
