chore: rearrange files

--- a/Notes.mdx
+++ b/Notes.mdx
@@ -55,3 +55,14 @@
   - Rules:
   - Don't put too many lines of code in one file
   - Max 200 lines of code per file
+
+### 2.2 Component Folder Structure
+
+- Each component may be multiple related files ex:
+  - the component itself
+  - test file
+  - storybook file
+  - documentation
+  - style file
+- How to organize the assets?
+  - All files related to a component should be in the same folder.
