--- a/Notes.mdx
+++ b/Notes.mdx
@@ -56,7 +56,7 @@
   - Don't put too many lines of code in one file
   - Max 200 lines of code per file
 
-### 2.2 Component Folder Structure
+### 2.2 Component Folder Structure and how to import them
 
 - Each component may be multiple related files ex:
   - the component itself
@@ -66,3 +66,4 @@
   - style file
 - How to organize the assets?
   - All files related to a component should be in the same folder.
+  - Please use relative paths for importing all the assets within the component folder.
