--- a/Notes.mdx
+++ b/Notes.mdx
@@ -80,3 +80,6 @@
 - 1. Page specific components
 - If a component is only used by one route, then it should be placed in the route folder.
 - 2. Shared components
+  - If a component is used in multiple routes, then it should be placed in the common components folder.
+  - src/app/components
+    - shadcn: for all shadcn components
