label.stories.ts

--- a/Notes.mdx
+++ b/Notes.mdx
@@ -124,3 +124,4 @@
 - It's a good way of demonstrating the component in the best possible way.
 - stories.ts:
   - `autodocs`: automatically generate documentation for the component
+- use `build-storybook` to build the storybook and you can host it on vercel or any other static site hosting service like s3 etc.
