--- a/Notes.mdx
+++ b/Notes.mdx
@@ -145,3 +145,7 @@
     - from test environment, select jsdom
   - automatically clear mock calls and instances between every test
     - No
+
+### 4.1 Unit Testing React Server Components
+
+### 4.2 Unit Testing React Client Components
