--- a/Notes.mdx
+++ b/Notes.mdx
@@ -149,3 +149,11 @@
 ### 4.1 Unit Testing React Server Components
 
 ### 4.2 Unit Testing React Client Components
+
+- The tests demonstrate:
+  - Component rendering
+  - State updates
+  - User interactions (clicks and input changes)
+  - Conditional rendering
+  - Multiple assertions per test
+    Proper use of testing-library best practices
