--- a/Notes.mdx
+++ b/Notes.mdx
@@ -157,3 +157,7 @@
   - Conditional rendering
   - Multiple assertions per test
     Proper use of testing-library best practices
+- `fireEvent`: to simulate user interactions
+  - recommended to use `userEvent` instead of `fireEvent`
+  - https://testing-library.com/docs/user-event/intro/
+  - `pnpm add --save-dev @testing-library/user-event`
