--- a/Notes.mdx
+++ b/Notes.mdx
@@ -161,3 +161,8 @@
   - recommended to use `userEvent` instead of `fireEvent`
   - https://testing-library.com/docs/user-event/intro/
   - `pnpm add --save-dev @testing-library/user-event`
+
+### 4.3 Unit Testing Async React Server Components with Jest
+
+- Make sure you use `await render`
+- Mock the fetch function
