--- a/Notes.mdx
+++ b/Notes.mdx
@@ -1,6 +1,6 @@
 # Next.js Workshop - Setting Up Production-Ready Infrastructure for Scalable Apps
 
-## 1 Eslint and prettier
+## 1 Eslint and prettier (my-first-next-app)
 
 - Eslint: Linting tool for identifying and reporting on patterns found in ECMAScript/JavaScript code. And check for errors etc.
 - Prettier: Code formatter that enforces a consistent style by parsing your code and re-printing it with its own rules that take the maximum line length into account, wrapping code when necessary.
@@ -23,7 +23,7 @@
         - https://github.com/IanVS/prettier-plugin-sort-imports (✅ Recommended)
           - `pnpm add --save-dev @ianvs/prettier-plugin-sort-imports`
 
-## 2 Project organization
+## 2 Project organization (my-first-next-app)
 
 ### 2.1 Component File Patterns
 
@@ -113,7 +113,7 @@
   - bgwebagency: `Button.tsx`, `AlertDialog.tsx`, `Checkbox.tsx` etc
     - it uses PascalCase
 
-## 3. Storybook
+## 3. Storybook (my-first-next-app)
 
 - https://storybook.js.org/
 - Storybook is a tool for
@@ -130,7 +130,7 @@
   - ex: whether to share stories from application or packages or both?
   - we will see in later sessions.
 
-## 4. Unit Testing with Jest
+## 4. Unit Testing with Jest (my-first-next-app)
 
 - https://jestjs.io/docs/getting-started
 - Installation: `pnpm add --save-dev jest jest-environment-jsdom @testing-library/react @testing-library/jest-dom ts-node @types/jest`
@@ -180,3 +180,8 @@
 - This is to import the isomorphic-fetch module in the test environment
 - Move the common imports to this file
 - This will run before each test
+
+## 5. Unit Testing with Vitest
+
+- Very popular recently
+- https://vitest.dev/
