--- a/Notes.mdx
+++ b/Notes.mdx
@@ -185,3 +185,14 @@
 
 - Very popular recently
 - https://vitest.dev/
+
+### 5.1 Install vitest
+
+- https://www.npmjs.com/package/@vitejs/plugin-react
+- `pnpm add -D vitest @vitejs/plugin-react jsdom @testing-library/react @testing-library/jest-dom @testing-library/user-event`
+  - vitest is the testing framework
+  - @vitejs/plugin-react is the react plugin for vitest
+  - jsdom is the virtual dom and faster than testing on browser
+  - @testing-library/react is for testing the react components
+  - @testing-library/jest-dom is the jest dom is for rendering the react components in the jsdom
+  - @testing-library/user-event is the user event library
