--- a/Notes.mdx
+++ b/Notes.mdx
@@ -196,3 +196,15 @@
   - @testing-library/react is for testing the react components
   - @testing-library/jest-dom is the jest dom is for rendering the react components in the jsdom
   - @testing-library/user-event is the user event library
+
+### 5.2 Vitest Configuration
+
+- https://github.com/vitest-tests/browser-examples/blob/main/examples/react/vitest.config.ts
+- add script in package.json
+- "test": "vitest run",
+- "test:watch": "vitest",
+- "test:ui": "vitest --ui"
+  - this gives a beautiful UI to see the test results (✅ Recommended)
+  - this also runs in watch mode
+
+### 5.3 Unit Testing RSC
