--- a/Notes.mdx
+++ b/Notes.mdx
@@ -208,3 +208,7 @@
   - this also runs in watch mode
 
 ### 5.3 Unit Testing RSC
+
+### 5.4 Unit Testing Client Components
+
+- Also it's a good practice to move `@testing-library/jest-dom/vitest` to a setup file to avoid importing it in every test file.
