--- a/Notes.mdx
+++ b/Notes.mdx
@@ -181,7 +181,7 @@
 - Move the common imports to this file
 - This will run before each test
 
-## 5. Unit Testing with Vitest
+## 5. Unit Testing with Vitest (my-second-next-app)
 
 - Very popular recently
 - https://vitest.dev/
@@ -218,3 +218,13 @@
 - Mock the fetch function
 - Use `afterEach` to clean up the DOM after each test
 - The concept is still the same as jest. Only the syntax is different.
+
+## 6. E2E Testing with Cypress (my-first-next-app)
+
+### 6.1 Install Cypress
+
+- E2E testing is where we create a headless browser and allow it to navigate to our site and do user actions like click etc and test
+- E2E testing helps us to get a smoke test for our application
+- https://www.cypress.io/
+- `npx cypress install`: to install cypress on the local machine
+- `npx cypress open`: to open the cypress UI
