--- a/Notes.mdx
+++ b/Notes.mdx
@@ -228,3 +228,11 @@
 - https://www.cypress.io/
 - `npx cypress install`: to install cypress on the local machine
 - `npx cypress open`: to open the cypress UI
+
+### 6.2 Cypress Configuration
+
+- cypress.config.ts
+
+### 6.3 Writing Tests
+
+- cypress/fixtures
