--- a/Notes.mdx
+++ b/Notes.mdx
@@ -236,3 +236,8 @@
 ### 6.3 Writing Tests
 
 - cypress/fixtures
+
+### 6.4 Setup concurrently
+
+- https://www.npmjs.com/package/concurrently
+- This is used to run the development server and the cypress test in parallel
