--- a/Notes.mdx
+++ b/Notes.mdx
@@ -362,3 +362,7 @@
     - con: it's' slightly difficult to manage the linkings
   - if the changes are frequent then you might wanna use monorepo
   - migrate to monorepo slowly by moving the shared code to the monorepo one by one
+
+### 9.2 Create a monorepo with TurboRepo
+
+- https://github.com/kirandash/nextjs-production-infrastructure-on-turbo
